Simulation GET, UPDATE, DELETE working

--- a/.env
+++ b/.env
@@ -8,8 +8,13 @@ API_URL=/api/v1
 #DB_USER='caalruizgu'
 #DB_PASSWORD='Quesito25'
 #DATABASE='db_esecurity'
-CONNECTION_STRING=mongodb+srv://notapassword:notapassword@miproyectito.nkjcl.mongodb.net/?retryWrites=true&w=majority&appName=MiProyectito
-DB_USER=notapassword
-DB_PASSWORD=notapassword
-DATABASE='Pruebas_Inversion'
-TOKEN_AV = " 7NONLRJ6ARKI0BA4"
+# CONNECTION_STRING=mongodb+srv://notapassword:notapassword@miproyectito.nkjcl.mongodb.net/?retryWrites=true&w=majority&appName=MiProyectito
+# DB_USER=notapassword
+# DB_PASSWORD=notapassword
+# DATABASE='Pruebas_Inversion'
+# TOKEN_AV = " 7NONLRJ6ARKI0BA4"
+
+CONNECTION_STRING=mongodb+srv://crmercadosa:2703@mycluster.4hvkm.mongodb.net/?retryWrites=true&w=majority&appName=MyCluster
+DB_USER="crmercadosa"
+DB_PASSWORD="2703"
+DATABASE='db_security'
