--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   ],
   "dependencies": {
     "@dotenvx/dotenvx": "^1.39.0",
-    "@sap/cds": "^8",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
@@ -21,7 +20,8 @@
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/cds": "^8.9.4"
   },
   "scripts": {
     "start": "cds-serve",
